flashメッセージの追加

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,5 +10,9 @@ html
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = javascript_importmap_tags
   body
+    p.notice
+      = notice
+    p.alert 
+      = alert 
     main.container.mx-auto.mt-28.px-5.flex
       = yield
