--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -10,7 +10,7 @@
                  }
         ) do |f| %>
 
-        <%= devise_error_messages! %>
+        <%= render "users/shared/error_messages", resource: resource %>
 
         <div class="mb-4">
             <%= f.label :email, class: "block font-bold mb-2 text-gray-700 text-sm" %>
