--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -9,8 +9,7 @@
                          class: "bg-white mb-4 px-8 pt-6 pb-8 rounded shadow-md"
                  }) do |f| %>
 
-        <%#= render "devise/shared/error_messages", resource: resource %>
-        <%= devise_error_messages! %>
+        <%= render "users/shared/error_messages", resource: resource %>
 
         <div class="mb-4">
             <%= f.label :email, class: "block font-bold mb-2 text-gray-700 text-sm" %>
