--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,2 +1,4 @@
-h1 Welcome#index
-p Find me in app/views/welcome/index.html.slim
+.w-full.max-w-xs
+  h1 SmartLottery
+  = link_to 'サインアップはこちらから','/users/sign_in',class: 'flex font-bold text-sm text-blue-500 hover:text-blue-800'
+  = link_to 'ログインはこちらから','/users/sign_up',class: 'flex font-bold text-sm text-blue-500 hover:text-blue-800'
