slim-lintの警告を修正

--- a/app/views/lotteries/new.html.slim
+++ b/app/views/lotteries/new.html.slim
@@ -1,8 +1,8 @@
 h1 New lottery
 
-== render "form", lottery: @lottery
+== render 'form', lottery: @lottery
 
 br
 
 div
-  = link_to "Back to lotteries", lotteries_path
+  = link_to 'Back to lotteries', lotteries_path
