--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -1,4 +1,4 @@
-p style="color: green" = notice
+p style='color: green' = notice
 
 h1 Lotteries
 
@@ -6,6 +6,6 @@ h1 Lotteries
   - @lotteries.each do |lottery|
     == render lottery
     p
-      = link_to "Show this lottery", lottery
+      = link_to 'Show this lottery', lottery
 
-= link_to "New lottery", new_lottery_path
+= link_to 'New lottery', new_lottery_path
