--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -9,3 +9,5 @@ h1 Lotteries
       = link_to 'この抽選会を表示する', lottery
 
 = link_to '抽選会を作成する', new_lottery_path
+
+= button_to 'Log Out', destroy_user_session_path, method: :delete 
