日本語対応

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,5 +14,5 @@ html
       = notice
     p.alert
       = alert
-    main.container.mx-auto.mt-28.px-5.flex.justify-center
+    main.container.mx-auto.mt-28.px-5
       = yield
