--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -10,7 +10,7 @@
     = form.label :user_id, style: 'display: block'
     = form.text_field :user_id
 
-  div
+  divp
     = form.label :name_field_enabled, style: 'display: block'
     = form.check_box :name_field_enabled
 
