--- a/app/views/lotteries/edit.html.slim
+++ b/app/views/lotteries/edit.html.slim
@@ -1,10 +1,10 @@
-h1 Editing lottery
+h1 抽選会を編集する
 
 == render 'form', lottery: @lottery
 
 br
 
 div
-  => link_to 'Show this lottery', @lottery
+  => link_to 'キャンセル', @lottery
   '|
-  =< link_to 'Back to lotteries', lotteries_path
+  =< link_to '抽選会一覧に戻る', lotteries_path
