--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full max-w-xs">
-    <h1 class="font-hairline mb-6 text-center">Resend Confirmation Instructions</h1>
+    <h1 class="font-hairline mb-6 text-center">確認メールの再送信</h1>
 
     <%= form_for(resource,
                  as: resource_name,
@@ -22,7 +22,7 @@
         </div>
 
         <div class="mb-4">
-            <%= f.submit "Resend Confirmation Info",
+            <%= f.submit "再送信",
                          class: "button bg-blue-500 hover:bg-blue-700 font-bold text-white focus:outline-none py-2 px-4 rounded focus:shadow-outline w-full"
             %>
         </div>
