--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -6,6 +6,6 @@ h1 Lotteries
   - @lotteries.each do |lottery|
     == render lottery
     p
-      = link_to 'Show this lottery', lottery
+      = link_to 'この抽選会を表示する', lottery
 
-= link_to 'New lottery', new_lottery_path
+= link_to '抽選会を作成する', new_lottery_path
