--- a/app/views/lotteries/new.html.slim
+++ b/app/views/lotteries/new.html.slim
@@ -1,8 +1,8 @@
-h1 New lottery
+h1 抽選会を作成する
 
 == render 'form', lottery: @lottery
 
 br
 
 div
-  = link_to 'Back to lotteries', lotteries_path
+  = link_to '抽選会一覧に戻る', lotteries_path
