--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,24 +1,24 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name),
+  <%= link_to "ログイン", new_session_path(resource_name),
               class: "inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
   %><br/>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot Password?", new_user_password_path(resource_name),
+  <%= link_to "パスワードを忘れた場合", new_user_password_path(resource_name),
               class: "inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
   %> <br/>
 <% end %>
 
- <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Sign up", new_registration_path(resource_name),
+<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <%= link_to "新規登録", new_registration_path(resource_name),
                 class: "inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
     %><br />
 <% end %>
 
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Didn't receive confirmation info?", new_user_confirmation_path(resource_name),
+  <%= link_to "確認メールが届かない場合", new_user_confirmation_path(resource_name),
               class: "inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
   %><br />
 <% end %>
