lotteries_pathをroot_pathに変更

--- a/app/views/lotteries/_lottery.html.slim
+++ b/app/views/lotteries/_lottery.html.slim
@@ -2,12 +2,12 @@ div id="#{dom_id lottery}"
   p
     strong
       = Lottery.human_attribute_name(:name_field_enabled)
-    =< lottery.name_field_enabled
+    = lottery.name_field_enabled
   p
     strong
       = Lottery.human_attribute_name(:note_field_enabled)
-    =< lottery.note_field_enabled
+    = lottery.note_field_enabled
   p
     strong
       = Lottery.human_attribute_name(:deadline)
-    =< lottery.deadline
+    = lottery.deadline
