--- a/app/views/prizes/index.html.slim
+++ b/app/views/prizes/index.html.slim
@@ -1,4 +1,4 @@
-p style="color: green" = notice
+p style='color: green' = notice
 
 h1 Prizes
 
@@ -6,6 +6,6 @@ h1 Prizes
   - @prizes.each do |prize|
     == render prize
     p
-      = link_to "Show this prize", prize
+      = link_to 'Show this prize', prize
 
-= link_to "New prize", new_prize_path
+= link_to 'New prize', new_prize_path
