--- a/app/views/prizes/new.html.slim
+++ b/app/views/prizes/new.html.slim
@@ -1,8 +1,8 @@
 h1 New prize
 
-== render "form", prize: @prize
+== render 'form', prize: @prize
 
 br
 
 div
-  = link_to "Back to prizes", prizes_path
+  = link_to 'Back to prizes', prizes_path
