--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with(model: @entry) do |form|
+= form_with(model: [@lottery, @entry]) do |form|
   - if @entry.errors.any?
     div style="color: red"
       h2 = "#{pluralize(@entry.errors.count, "error")} prohibited this entry from being saved:"
