--- a/app/views/entries/index.html.slim
+++ b/app/views/entries/index.html.slim
@@ -6,6 +6,6 @@ h1 Entries
   - @entries.each do |entry|
     == render entry
     p
-      = link_to "Show this entry", entry
+      = link_to "Show this entry", lottery_entry_path(@lottery, entry)
 
-= link_to "New entry", new_entry_path
+= link_to "New entry", new_lottery_entry_path(@lottery)
