--- a/app/views/entries/show.html.slim
+++ b/app/views/entries/show.html.slim
@@ -3,8 +3,8 @@ p style="color: green" = notice
 == render @entry
 
 div
-  => link_to "Edit this entry", edit_entry_path(@entry)
+  => link_to "Edit this entry", edit_lottery_entry_path(@lottery, @entry)
   '|
-  =< link_to "Back to entries", entries_path
+  =< link_to "Back to entries", lottery_entries_path(@lottery)
 
-  = button_to "Destroy this entry", @entry, method: :delete
+  = button_to "Destroy this entry", lottery_entry_path(@lottery, @entry), method: :delete
