--- a/app/views/entries/edit.html.slim
+++ b/app/views/entries/edit.html.slim
@@ -1,10 +1,10 @@
 h1 Editing entry
 
-== render "form", entry: @entry
+== render 'form', entry: @entry
 
 br
 
 div
-  => link_to "Show this entry", lottery_entry_path(@lottery, @entry)
+  => link_to 'Show this entry', lottery_entry_path(@lottery, @entry)
   '|
-  =< link_to "Back to entries", lottery_entries_path(@lottery)
+  =< link_to 'Back to entries', lottery_entries_path(@lottery)
