--- a/app/views/entries/index.html.slim
+++ b/app/views/entries/index.html.slim
@@ -1,4 +1,4 @@
-p style="color: green" = notice
+p style='color: green' = notice
 
 h1 Entries
 
@@ -6,6 +6,6 @@ h1 Entries
   - @entries.each do |entry|
     == render entry
     p
-      = link_to "Show this entry", lottery_entry_path(@lottery, entry)
+      = link_to 'Show this entry', lottery_entry_path(@lottery, entry)
 
-= link_to "New entry", new_lottery_entry_path(@lottery)
+= link_to 'New entry', new_lottery_entry_path(@lottery)
