--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -1,8 +1,8 @@
 h1 New entry
 
-== render "form", entry: @entry
+== render 'form', entry: @entry
 
 br
 
 div
-  = link_to "Back to entries", lottery_entries_path(@lottery)
+  = link_to 'Back to entries', lottery_entries_path(@lottery)
