不要な箇所を削除

--- a/app/views/entries/_entry.html.slim
+++ b/app/views/entries/_entry.html.slim
@@ -6,9 +6,9 @@ div id="#{dom_id entry}"
   - if lottery.name_field_enabled
     p
       strong Name:
-      =< entry.name
+      = entry.name
 
   - if lottery.note_field_enabled
     p
       strong Note:
-      =< entry.note
+      = entry.note
