--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -8,12 +8,12 @@
 
   div
     = form.label :email, style: 'display: block'
-    = form.text_field :email
+    = form.text_field :email, required: true
 
   - if lottery.name_field_enabled
     div
       = form.label :name, style: 'display: block'
-      = form.text_field :name
+      = form.text_field :name, required: true
 
   - if lottery.note_field_enabled
     div
