--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -1,8 +1,5 @@
-h1 New entry
-
-== render 'form', entry: @entry, lottery: @lottery
-
-br
-
-div
-  = link_to 'Back to entries', lottery_entries_path(@lottery)
+- if closed?(@lottery)
+    h1 抽選は終了しました。
+- else
+    h1 New entry
+    == render 'form', entry: @entry, lottery: @lottery
