応募完了後応募完了ページを表示するようにした

--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -1,5 +1,6 @@
-- if closed?(@lottery)
-    h1 抽選は終了しました。
-- else
+= turbo_frame_tag 'entry_completed' do
+  - if closed?(@lottery)
+      h1 抽選は終了しました。
+  - else
     h1 New entry
     == render 'form', entry: @entry, lottery: @lottery
