--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,10 @@ html
     = javascript_importmap_tags
     = javascript_include_tag 'jquery'
   body
+    - if user_signed_in?
+      nav.nav-link.flex.justify-between.bg-stone-100.p-2.
+        .flex.flex-shrink-0.text-white.mx-6.align-middle
+          = link_to image_tag('logo.png'), root_path
     p.notice
       = notice
     p.alert
