キャンセルボタンの設置

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -49,5 +49,6 @@
       <%= render "users/shared/links" %>
 
     <% end %>
+    <%= button_to 'キャンセル', welcome_path, method: :get, data: { turbo: 'false' } %>
   </div>
 <% end %>
