--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,8 @@ html
       nav.nav-link.flex.justify-between.bg-stone-100.p-2.
         .flex.flex-shrink-0.text-white.mx-6.align-middle
           = link_to image_tag('logo.png'), root_path
+        .flex.flex-shrink-0.items-center.text-brown.mx-6.align-middle
+          = button_to 'Log Out', destroy_user_session_path, method: :delete
     p.notice
       = notice
     p.alert
