--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -42,7 +42,7 @@
       <div class="mb-4">
         <%= f.submit "登録する",
           data: { turbo: 'false' },
-          class: "button rounded-full bg-green-700 hover:bg-green-800 font-bold text-white focus:outline-none py-2 px-4 focus:shadow-outline w-full"
+          class: "button rounded bg-green-700 hover:bg-green-800 font-bold text-white focus:outline-none py-2 px-4 focus:shadow-outline w-full"
         %>
       </div>
 
