抽選会作成ページのデザインを修正

--- a/app/views/lotteries/new.html.slim
+++ b/app/views/lotteries/new.html.slim
@@ -1,8 +1,4 @@
-h1 抽選会を作成する
+h1.text-center.font-bold.text-2xl.mt-3
+  | 抽選会を作成する
 
 == render 'form', lottery: @lottery
-
-br
-
-div
-  = link_to '抽選会一覧に戻る', root_path
