--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -1,24 +1,26 @@
-= form_with(model: [lottery, entry]) do |form|
-  - if entry.errors.any?
-    div style='color: red'
-      h2 = "#{pluralize(entry.errors.count, 'error')} prohibited this entry from being saved:"
-      ul
-        - entry.errors.each do |error|
-          li = error.full_message
+.flex.justify-center
+  = form_with(model: [lottery, entry]) do |form|
+    - if entry.errors.any?
+      div style='color: red'
+        h2 = "#{pluralize(entry.errors.count, 'error')} prohibited this entry from being saved:"
+        ul
+          - entry.errors.each do |error|
+            li = error.full_message
 
-  div
-    = form.label :email, style: 'display: block'
-    = form.text_field :email, required: true
+    .mt-3
+      = form.label :email, style: 'display: block'
+      = form.text_field :email, required: true, class: 'mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded'
 
-  - if lottery.name_field_enabled
-    div
-      = form.label :name, style: 'display: block'
-      = form.text_field :name, required: true
+    - if lottery.name_field_enabled
+      .mt-3
+        = form.label :name, style: 'display: block'
+        = form.text_field :name, required: true, class: 'mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded'
 
-  - if lottery.note_field_enabled
-    div
-      = form.label :note, style: 'display: block'
-      = form.text_field :note
+    - if lottery.note_field_enabled
+      .mt-3
+        = form.label :note, style: 'display: block'
+        = form.text_area :note, class: 'mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded'
 
-  div
-    = form.submit
+    .mt-6.text-center.flex.justify-center
+      .bg-green-700.w-40.font-bold.text-white.rounded.py-2.px-2.hover:bg-green-800
+        = form.submit
