応募完了ページデザインを追加

--- a/app/views/entries/_entry_completed.html.slim
+++ b/app/views/entries/_entry_completed.html.slim
@@ -1,1 +1,7 @@
-h1 応募は完了しました
+.flex.justify-center.w-screen.h-screen.items-center
+  div.mb-64.text-center
+    h1.text-2xl.text-bold
+      | 応募完了しました
+      hr.bg-emerald-200.h-1.w-32.mx-auto.rounded
+    .mt-3.text-stone-950
+      | 後日当選者の方にメールを送付しますので、少々お待ちください。
