shadowoをつけないで統一

--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -9,7 +9,7 @@
 
     .mt-6
       = form.label :deadline, style: 'display: block'
-      = form.date_field :deadline, class: 'mt-2 shadow rounded border border-gray-200 w-80'
+      = form.date_field :deadline, class: 'mt-2 rounded border border-gray-200 w-80'
 
     .mt-3
       = form.label :name_field_enabled, style: 'display: block'
