--- a/app/views/lotteries/_lottery.html.slim
+++ b/app/views/lotteries/_lottery.html.slim
@@ -15,7 +15,7 @@
       = Lottery.human_attribute_name(:note_field_enabled)
   
   - lottery.prizes.each do |prize|
-    .bg-stone-100.border.border-gray.rounded.shadow.mt-5
+    .bg-stone-100.border.border-gray.rounded.mt-5
       table.text-left
         tr
           th.px-3
