--- a/app/views/lotteries/show.html.slim
+++ b/app/views/lotteries/show.html.slim
@@ -9,10 +9,10 @@
   == render @lottery
 
   div
-    .flex.justify-center.items-center
+    .flex.justify-center.items-end
       .mt-6.mx-2.bg-green-700.font-bold.h-10.text-white.rounded.py-2.px-2.hover:bg-green-800
         = button_to '編集する', edit_lottery_path(@lottery), method: 'get'
-      .mt-6.mx-2.bg-green-700.font-bold.h-10.text-white.rounded.py-2.px-2.hover:bg-green-800
-        = button_to '削除する', @lottery, method: :delete
+      .mt-6.mx-2
+        = button_to '削除する', @lottery, method: :delete, class: 'underline text-sm'
   .underline.mt-6
     = link_to '一覧に戻る', root_path
