--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -23,7 +23,7 @@
       = form.fields_for :prizes do |prize|
         = render 'prize_fields', f: prize
 
-    button.bg-green-700.font-bold.w-36.h-10.text-white.rounded.py-2.px-2.hover:bg-green-800.mt-3
+    button.w-36.h-10.rounded.py-2.px-2.mt-3.border.border-zinc-400
       = link_to_add_association '＋賞品を追加', form, :prizes, data: { association_insertion_node: '.prizes', association_insertion_method: :append }
     ul.flex.justify-center.list-none.mt-6
       li
