--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -1,4 +1,4 @@
-.flex.justify-center
+.w-3/6.m-auto
   = form_with(model: @lottery) do |form|
     - if @lottery.errors.any?
       div style='color: red'
