--- a/app/views/lotteries/_lottery.html.slim
+++ b/app/views/lotteries/_lottery.html.slim
@@ -1,8 +1,8 @@
 .m-auto.mt-3
   .font-bold
     = Lottery.human_attribute_name(:deadline)
-  div
-    = lottery.deadline
+  .mt-3
+    = l(lottery.deadline.end_of_day)
   .font-bold.mt-3
     | 応募フォームオプション
   .flex.items-center.mt-3
