--- a/app/views/entries/_entry_completed.html.slim
+++ b/app/views/entries/_entry_completed.html.slim
@@ -1,5 +1,5 @@
 .flex.justify-center.w-screen.h-screen.items-center
-  div.mb-64.text-center
+  .mb-64.text-center
     h1.text-2xl.text-bold
       | 応募完了しました
       hr.bg-emerald-200.h-1.w-32.mx-auto.rounded
