--- a/app/views/lotteries/show.html.slim
+++ b/app/views/lotteries/show.html.slim
@@ -1,7 +1,7 @@
 .m-auto.w-5/12
   h1.mt-6.font-semibold.text-2xl.text-center
     | 抽選会
-  div.mt-6.m-auto data-controller='clipboard'
+  .mt-6.m-auto data-controller='clipboard'
     input type='hidden' value=new_lottery_entry_url(@lottery) readonly='readonly' data-clipboard-target='source'
     .font-bold.w-64.h-10.rounded.py-2.px-2.m-auto.text-center.border.border-zinc-400
       button data-action='clipboard#copy' data-clipboard-target='copyButton'
