--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -6,7 +6,7 @@
     = image_tag 'logo_2.png', class: 'm-auto'
   .mt-5
     .bg-green-700.font-bold.w-36.h-10.m-auto.text-white.rounded.flex.items-center.justify-center.hover:bg-green-800
-      = button_to 'サインアップ', '/users/sign_up', method: :get, data: { turbo_frame: 'sign_up' }
+      = button_to '新規登録', '/users/sign_up', method: :get, data: { turbo_frame: 'sign_up' }
     .w-16.m-auto.mt-2.text-gray.text-sm
       = button_to 'ログイン', '/users/sign_in', method: :get, data: { turbo_frame: 'sign_in' }
   .hidden.fixed.m-auto.w-screen.h-screen.top-0.left-0.bg-gray-700/50.z-10 data-controller='modal' data-modal-target='modal' data-action='turbo:frame-load->modal#open turbo:submit-end->modal#close'
