ログインページのデザインを追加

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -5,7 +5,7 @@
   .max-w.mt-3
     = image_tag 'logo_2.png', class: 'm-auto'
   .mt-5
-    .bg-green-700.font-bold.w-36.h-10.m-auto.text-white.rounded.flex.items-center.justify-center.hover:bg-green-800
+    .bg-lime-600.font-bold.w-36.h-10.m-auto.text-white.rounded.flex.items-center.justify-center.hover:bg-green-800
       = button_to '新規登録', '/users/sign_up', method: :get
     .w-16.m-auto.mt-2.text-gray.text-sm
       = button_to 'ログイン', '/users/sign_in', method: :get
