--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,12 +1,12 @@
-<div class="w-full max-w-xs">
-    <h1 class="font-hairline mb-6 text-center">Forgot your password?</h1>
+<div class="w-full max-w-xs mx-auto mt-10">
+    <h1 class="font-hairline mb-6 text-center text-xl">パスワードを忘れましたか ?</h1>
 
     <%= form_for(resource,
                  as: resource_name,
                  url: password_path(resource_name),
                  html: {
                          method: :post,
-                         class: "bg-white mb-4 px-8 pt-6 pb-8 rounded shadow-md"
+                         class: "bg-white mb-4 px-8 pt-6 pb-8 rounded"
                  }) do |f| %>
 
         <%= render "users/shared/error_messages", resource: resource %>
@@ -19,8 +19,8 @@
         </div>
 
         <div class="mb-4">
-            <%= f.submit "Send Password Reset Info",
-                         class: "button bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full" %>
+            <%= f.submit "パスワードの再設定方法を送信する",
+                         class: "button bg-lime-600 hover:bg-lime-700 text-white font-bold py-2 px-4 rounded focus:outline-none w-full text-sm" %>
         </div>
 
         <%= render "users/shared/links" %>
