--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -25,4 +25,5 @@
 
         <%= render "users/shared/links" %>
     <% end %>
+    <%= button_to 'キャンセル', welcome_path, method: :get, class: 'underline' %>
 </div>
