--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -41,7 +41,7 @@
     <div class="mb-4">
       <%= f.submit "登録する",
         data: { turbo: 'false' },
-        class: "button rounded bg-lime-600 hover:bg-green-800 font-bold text-white focus:outline-none py-2 px-4 focus:shadow-outline w-full"
+        class: "button rounded bg-lime-600 hover:bg-lime-700 font-bold text-white focus:outline-none py-2 px-4 focus:shadow-outline w-full"
       %>
     </div>
 
