formの背景色を統一

--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -6,7 +6,7 @@
                  url: confirmation_path(resource_name),
                  html: {
                          method: :post,
-                         class: "bg-white mb-4 px-8 pt-6 pb-8 rounded shadow-md"
+                         class: "bg-stone-100 mb-4 px-8 pt-6 pb-8 rounded shadow-md"
                  }) do |f| %>
 
         <%= render "users/shared/error_messages", resource: resource %>
