--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,7 +5,7 @@
     as: resource_name,
     url: registration_path(resource_name),
     html: {
-            class: "bg-white mb-4 px-8 pt-6 pb-8 rounded shadow-md"
+            class: "bg-stone-100 mb-4 px-8 pt-6 pb-8 rounded shadow-md"
     }
   ) do |f| %>
 
