--- a/app/views/lotteries/_prize_fields.html.slim
+++ b/app/views/lotteries/_prize_fields.html.slim
@@ -7,15 +7,15 @@
 
     .mt-3
       = f.label :winners_count, style: 'display: block'
-      = f.number_field :winners_count, placeholder: '当選者数を入力してください', class: 'w-full mt-2 rounded border border-gray-200'
+      = f.number_field :winners_count, placeholder: '2', class: 'w-full mt-2 rounded border border-gray-200'
 
     .mt-3
       = f.label :winning_email_subject, style: 'display: block'
-      = f.text_field :winning_email_subject, placeholder: '当選者宛メールの件名を入力してください', class: 'w-full mt-2 rounded border border-gray-200'
+      = f.text_field :winning_email_subject, placeholder: '当選おめでとうございます!', class: 'w-full mt-2 rounded border border-gray-200'
 
     .mt-3
       = f.label :winning_email_body, style: 'display: block'
-      = f.text_area :winning_email_body, placeholder: '当選者宛メールの本文を入力してください', class: 'w-full mt-2 rounded border border-gray-200 leading-10'
+      = f.text_area :winning_email_body, placeholder: winning_email_body, class: 'w-full mt-2 rounded border border-gray-200 leading-10 text-sm'
 
     .text-right.underline
         = link_to_remove_association '削除', f
