--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -1,4 +1,4 @@
-.flex.justify-center
+.w-5/12.m-auto
   = form_with(model: [lottery, entry]) do |form|
     - if entry.errors.any?
       div style='color: red'
@@ -11,7 +11,7 @@
       = form.label :email, style: 'display: block'
       = form.text_field :email,
         required: true,
-        class: 'mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded',
+        class: 'w-full mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded',
         placeholder: 'entry@example.com'
 
     - if lottery.name_field_enabled
@@ -19,14 +19,14 @@
         = form.label :name, style: 'display: block'
         = form.text_field :name,
           required: true,
-          class: 'mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded',
+          class: 'w-full mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded',
           placeholder: 'odentakashi'
 
     - if lottery.note_field_enabled
       .mt-3
         = form.label :note, style: 'display: block'
         = form.text_area :note,
-          class: 'mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded',
+          class: 'w-full mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded text-sm',
           placeholder: 'その他、お知らせがあればご記入ください。'
 
     .mt-6.text-center.flex.justify-center
