--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -26,7 +26,7 @@
       .mt-3
         = form.label :note, style: 'display: block'
         = form.text_area :note,
-          class: 'w-full mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded text-sm',
+          class: 'h-40 w-full mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded text-sm',
           placeholder: 'その他、お知らせがあればご記入ください。'
 
     .mt-6.text-center.flex.justify-center
